inst/feedback.css
/* ... */
.quick-com > details > summary, .flow > details > summary, .rubric > details > summary {
    border: solid 1px rgb(var(--theme-col));
    border-radius: 6px;
    background-color: rgb(var(--theme-col));
    width: 40px;
    text-align: center;
}

.quick-com > details > iframe, .flow > details > iframe, .rubric > details > iframe {
	top: -1px;
    width: calc(100vw - 312px);
    height: 90vh;
    z-index: 3;
    position: relative;
    margin: 0;
    padding: 0;
    border: solid 1px rgb(var(--theme-col));
	border-radius: 6px;
}

.quick-com > details[open], .flow > details[open], .rubric > details[open] {
    width: calc(100vw - 312px);
    position: relative;
    z-index: 2;
    padding-left: 0;
}

.second > details[open] {
	right: -50px;
}

.third > details[open] {
	right: -100px;
}

.quick-com > details[open] > summary, .flow > details[open] > summary,
.rubric > details[open] > summary {
	position: relative;
	float: right;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
}

.rubric > details[open] > iframe {
	border-top-right-radius: 0;
}

.second > details[open] > summary {
	position: relative;
	right: 50px;
}

.third > details[open] > summary {
	position: relative;
	right: 100px;
}

summary > img {
	vertical-align: top;
    margin-top: 4px;
}

.flow > details > img {
    max-height: 90vh;
    float: right;
    margin-top: 31px;
    border: 1px solid rgb(var(--theme-col));
    border-radius: 6px;
    padding: 5px;
    background-color: rgba(var(--theme-col), .7);
    margin-right: -40px;
}

@media screen and (max-width: 1130px) { 
	
	#header {
		margin-bottom: 100px;
	}
	
	.sidebar2 {
		right: 0;
	}
	
	.mark {
		position: relative;
		top: 65px;
		left: 75px;
		width: 150px;
		padding: .5em .3em 0em 0.7em;
	}

	.mark::before {
		font-size: 18pt;
		top: 3px;
	}
	.main-content {
		width: calc(100% - 260px);
		left: 270px;
	}
	
	c1:hover::before, c2:hover::before, c3:hover::before,
	c4:hover::before, c5:hover::before {
		top: 20px;
	}

	c1:hover::after, c2:hover::after, c3:hover::after,
	c4:hover::after, c5:hover::after {
		top: 50px;
	}
			
	.grade {
		position: relative;
		width: 100%;
		top: 0;
		right:0;
		text-align: center;
		margin: -5px;
		padding-bottom: 20px;
	}
	
	details[open] {
		width: 100%;
	}
	
	.rubric {
		right: 20px;
	}

	.second {
		right: 70px;
	}
	
	.third {
		right: 120px;
	}
	
	.quick-com > details[open], .flow > details[open], .rubric > details[open] {
		width: calc(100vw - 52px);
	}
	
	.quick-com > details > iframe, .flow > details > iframe, .rubric > details > iframe {
		width: calc(100vw - 52px);
	}
}


@media screen and (max-width: 920px) { 
	
	.main-content {
		position: absolute;
		top: var(--res-offset);
		width: 100%;
		left: 0px;
	}
	
	.sidebar1 {
		position: fixed;
		top: 20px;
		left: 30px;
		height: max-content;
		width: calc(100vw - 76px);
		min-height: 0;
	}
	
	.results-container {
		overflow-x: auto;
		overflow-y: hidden;
		position: sticky;
		background-color: white;
		z-index: 2;
	}
	
	.results {
		display: inline-grid;
		padding: 30px 0px 0px 0px;
		grid-gap: 5px;
		min-width: var(--res-width);
		
	}
	
	.results-container::before {
		position: absolute;
		top: 5px;
	}
	.results-item {
		text-align: left;
		padding: 0;
	}
	
	.item1 {
		grid-column: 1;
		grid-row: 1;
	}
	
	.item2 {
		grid-column: 2;
		grid-row: 1;
	}
	
	.item3 {
		grid-column: 3;
		grid-row: 1;
	}
	
	.item4 {
		grid-column: 4;
		grid-row: 1;
	}
	
	.mark {
		top: calc(var(--res-offset) + 85px);
		left: 65px;	
	}	
	
	c1:hover::before, c2:hover::before, c3:hover::before,
	c4:hover::before, c5:hover::before {
		top: 32vh;
		right: 25px;
	}

	c1:hover::after, c2:hover::after, c3:hover::after,
	c4:hover::after, c5:hover::after {
		top: calc(32vh + 30px);
		right: 25px;
	}
	
	.quick-com, .flow, .rubric {
		top: 30px;
	}
	
	.rubric {
		right: 30px;
	}

	.second {
		right: 80px;
	}
	
	.third {
		right: 130px;
	}
	
	.quick-com > details > summary, .flow > details > summary, .rubric > details > summary {
		margin-right: 5px;
	}
	
	.quick-com > details[open], .flow > details[open], .rubric > details[open] {
		width: calc(100vw - 77px);
	}
	
	.quick-com > details > iframe, .flow > details > iframe, .rubric > details > iframe {
		width: calc(100vw - 77px);
	}

	.rubric > details[open] > iframe {
		border-top-right-radius: 6px;
	}
	
	.flow > details > img {
		margin-top: 0;
		margin-right: 0;
	}
}


@media screen and (max-width: 728px) { 
	.sidebar2 {
		left: calc(711px - 274px);
	}
}

@media screen and (max-width: 600px) { 

	#header {
		margin-bottom: 0;
	}
	
	.sidebar2 {
		left: 0;
		width: 100%;
		position: relative;
		top: var(--res-offset);
		height: auto;
	}
	
	.mark-container {
		height: 150px;
		position: relative;
		left: 0;
	}
	
	.mark {
		position: absolute;
		bottom: 10px;
		top: auto;
		left: 0;
	}
	
	.mark::before {
		position: absolute;
	}
	
	.main-content {
		position: relative;
	}
	
	.quick-com, .flow, .rubric {
		top: 35px;
	}
	
}


@media screen and (max-width: 535px) {
	
	.c1, .c2, .c3, .c4, .c5 {
		width: 98%;
	}
}
</style>

